[gd_scene load_steps=7 format=3 uid="uid://bedcxtwq5jwn3"]

[ext_resource type="Theme" uid="uid://bs6rbteugufj6" path="res://Resources/Themes/LevelUpTheme.tres" id="1_lossl"]
[ext_resource type="Script" path="res://GUI/Scripts/UpgradeOption.gd" id="2_sk2l2"]
[ext_resource type="Texture2D" uid="uid://c1d6ell4y0hv6" path="res://Art/GUI/WeaponUpgradeIconFrame.aseprite" id="3_7c5mg"]
[ext_resource type="Texture2D" uid="uid://cbu3gwbggtue6" path="res://Art/Weapons/BeefBallBulletIcon.aseprite" id="4_gwy21"]
[ext_resource type="LabelSettings" uid="uid://by1y6hdwmxsj6" path="res://Resources/Themes/new_label_settings.tres" id="5_vv2yc"]

[sub_resource type="Theme" id="Theme_8xj6q"]

[node name="Option" type="Button"]
texture_filter = 1
custom_minimum_size = Vector2(100, 160)
offset_right = 100.0
offset_bottom = 160.0
theme = ExtResource("1_lossl")
script = ExtResource("2_sk2l2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 71.0
offset_right = 85.0
offset_bottom = 138.0
theme_override_constants/separation = 1

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/line_spacing = 2
theme_override_font_sizes/font_size = 7
text = "Broth Bullet"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LevelDescription" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 4
text = "Level 1 -> 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(65, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = SubResource("Theme_8xj6q")
theme_override_font_sizes/font_size = 2
label_settings = ExtResource("5_vv2yc")
clip_text = true

[node name="IconFrame" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 70.0
texture = ExtResource("3_7c5mg")

[node name="WeaponIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 25.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 70.0
texture = ExtResource("4_gwy21")
stretch_mode = 3

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
